--- a/Calculate Files.html
+++ b/Calculate Files.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="author" content="Pogi">
   <title>Calculate Files (Web)</title>
   <link rel="stylesheet" href="styles.css">
 </head>
